--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,19 +13,30 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.8",
+    "@storybook/addon-actions": "^6.1.4",
+    "@storybook/addon-essentials": "^6.1.4",
+    "@storybook/addon-links": "^6.1.4",
+    "@storybook/node-logger": "^6.1.4",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.4",
+    "babel-loader": "^8.2.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "react-is": "^17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public --no-dll",
+    "build-storybook": "build-storybook -s public --no-dll"
   },
   "eslintConfig": {
     "extends": [
