--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,10 +1,11 @@
 {
-    "singleQuote": true, 
-    "semi": false,
-    "useTabs": false,  
-    "tabWidth": 2, 
-    "trailingComma": "all", 
-    "printWidth": 80,
-    "arrowParens": "avoid", 
-    "bracketSpacing": true
+  "singleQuote": true,
+  "semi": false,
+  "useTabs": false,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "auto"
 }
