--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
     "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.8",
