--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.8",
