--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
     "socket.io": "^3.0.3"
   },
   "devDependencies": {
