--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^6.1.0",
+    "recoil": "^0.1.2",
     "socket.io-client": "^3.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
