--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "draft": "^0.2.3",
+    "draft-js": "^0.11.7",
+    "draft-js-markdown-plugin": "^3.0.5",
+    "draft-js-markdown-shortcuts-plugin": "^0.6.1",
+    "draft-js-plugins-editor": "^3.0.0",
     "emoji-mart": "^3.0.0",
     "qs": "^6.9.4",
     "react": "^17.0.1",
