--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,7 @@
-FROM alpine
+FROM rockpell/alpine-node:1
 
 LABEL maintainer="rockpell"
 
-RUN apk update && apk upgrade
-RUN apk add nodejs-npm && apk add git
 RUN git clone https://github.com/boostcamp-2020/Project12-C-Slack-Web.git
 WORKDIR /Project12-C-Slack-Web/backend
 COPY ./.env.prod ./
