--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "immer": "^8.0.0",
     "qs": "^6.9.4",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
